dev/git/ Добавление workflow (#4)
* dev/db/ Добавил workflow

* dev/db/ Исправил код под checkstyle

* dev/db/ Поменял версию ubuntu с latest на определенную версию

* dev/db/ Добавил jacoco

* dev/db/ Добавил миграции для тестов

* dev/db/ Попытка добавить загрузку бд в контекст потока

* dev/db/ Добавил библиотеки для тестов

* dev/db/ Попытка добавить проход тестов в wf

* dev/db/ Удалил ненужный тест

* dev/db/ убрал wait-for-it.sh в dockerFile