@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'jacoco'
+	id 'checkstyle'
 }
 
 group = 'com.cf'
@@ -15,6 +17,11 @@ java {
 
 repositories {
 	mavenCentral()
+}
+
+checkstyle {
+	toolVersion = '10.3'
+	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
 }
 
 dependencies {
@@ -32,9 +39,25 @@ dependencies {
 
 	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
+	testImplementation 'org.wiremock:wiremock-standalone:3.9.1'
+	testImplementation 'org.wiremock.integrations.testcontainers:wiremock-testcontainers-module:1.0-alpha-14'
+	testImplementation 'org.testcontainers:postgresql:1.20.3'
+	testImplementation 'org.liquibase:liquibase-core:4.29.2'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.test {
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+	systemProperty "spring.profiles.active", "test"
+}
+
+jacocoTestReport {
+	reports {
+		html.required = true
+		xml.required  = true
+	}
 }
